# adalove_extract_cards_enhanced

./: .gitignore  AGENTS_ORCHESTRATION.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  GUI_FEATURE_SUMMARY.md  LICENSE  PARALELIZACAO_SUMMARY.md  PROMPT_AGENT_V3.md  QUICK_START.md  README.md  RESUMO_ROADMAP.md  ROADMAP.md  TODO.md  V3.0_SUMMARY.md  V3.1.0_IMPLEMENTATION_SUMMARY.md  adalove_extractor.py  main.py  main_completo_original.py  main_v3.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run_v3.sh
.github/: PULL_REQUEST_TEMPLATE.md  SETUP_GITHUB.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  refactor.md
adalove_extractor/: __init__.py
adalove_extractor/browser/: __init__.py  auth.py  navigator.py
adalove_extractor/cli/: __init__.py  main.py
adalove_extractor/config/: __init__.py  logging.py  settings.py
adalove_extractor/enrichment/: __init__.py  anchor.py  engine.py  normalizer.py
adalove_extractor/extractors/: __init__.py  card.py  week.py
adalove_extractor/io/: __init__.py  checkpoint.py  incremental_writer.py  recovery.py  writers.py
adalove_extractor/models/: __init__.py  card.py  card_types.py  enriched_card.py
adalove_extractor/utils/: __init__.py  hash.py  text.py
arquivos_antigos/: ORGANIZACAO_FINAL.md  extrator_completo.py  extrator_simples.py  main_completo.py  main_debug.py  main_inteligente.py  main_melhorado.py  main_modulo6.py  main_reformulado.py  main_teste.py  main_teste_melhorado.py  readme_antigo.md
dados_extraidos/: README.md
dados_extraidos/modulo6/: cards_completos_20250826_220413.csv  cards_enriquecidos_20250826_220413.csv  cards_enriquecidos_20250826_220413.jsonl
dados_extraidos/modulo7/: cards_completos_20250826_172707.csv  cards_enriquecidos_20250826_172707.csv  cards_enriquecidos_20250826_172707.jsonl
documents/: ARQUIVOS_GERADOS.md  COMO_USAR_ROADMAP.md  DADOS_EXTRAIDOS.md  ENRIQUECIMENTO.md  ESTRUTURA_ROADMAP.md  GUIA_EXTRACAO.md  INSTALACAO.md  README_reformulacao.md
logs/: .gitkeep
prompts/: PROMPT_AGENT_A_CORE.md  README_AGENTS.md
tests/: test_checkpoint_manager.py  test_incremental_writer.py  test_integration_checkpoint_flow.py  test_recovery_manager.py
